week6/juhwan/board-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-deployment
  labels:
    app: board-deployment
spec:
  replicas: 3  # Replication factor 설정
  selector:
    matchLabels:
      app: board-deployment
  template:
    metadata:
      labels:
        app: board-deployment
    spec:
      containers:
      - name: board-container
        image: gjwnghks99/board:1.0.3
        ports:
        - containerPort: 8080
