week6/juhwan/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello-deployment
spec:
  replicas: 3  # Replication factor 설정
  selector:
    matchLabels:
      app: hello-deployment
  template:
    metadata:
      labels:
        app: hello-deployment
    spec:
      containers:
      - name: hello-container
        image: gjwnghks99/hello:1.0.0
        ports:
        - containerPort: 8080
