week6/juhwan/board-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-svc
spec:
  selector:
    app: board-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
