week6/juhwan/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello-deployment
  ports:
    - protocol: TCP
      port: 8080       # 서비스가 제공하는 포트
      targetPort: 8080 # 컨테이너가 사용하는 포트
  type: ClusterIP
