week6/juhwan/board-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test 
  annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
  - host: juhwan.ingress.com 
    http:
      paths:
      - path: /board
        pathType: Prefix
        backend:
          service:
            name: board-svc 
            port:
              number: 8080 
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 8080
